# Project-Aiko

./: .env.example  .gitattributes  .gitignore  AikoLauncher.py  Dockerfile  LAUNCH_AIKO.bat  OPENCLAW_INTEGRATION.md  README.md  README_HF.md  REMEDIATION_S_TIER.md  build_sidecar.py  discord_bot.py  docker-compose.yml  fastfetch_config.jsonc  fetch_hf_logs.py  launch.py  launch_aiko.sh  local.properties  neural_hub.spec  push_to_hf.py  pyproject.toml  requirements.txt  set_hf_secret.py  start_aiko_tauri.py  styles.css  task.md  telegram_bot.py  twitch_bot.py  user_settings.example.json
.github/workflows/: ci.yml  deploy.yml  pages.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
aiko-app/: README-Mobile.md  dist_contents.txt  index.html  package-lock.json  package.json  tsc_errors.txt  vite.config.ts
aiko-app/.cargo/: config.toml
aiko-app/src/: App.css  App.tsx  MascotApp.tsx  MobileApp.tsx  SplashScreen.tsx  main.tsx  vite-env.d.ts
aiko-app/src-tauri/: Cargo.toml  tauri.conf.json
aiko_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
android/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
assets/: vivian.wav.pt
assets/live2d/: index.html  薇薇安.moc3
cloud_bot/: app.py  requirements.txt
core/: __init__.py  agency.py  agent_executor.py  autonomous_agent.py  biometrics.py  bot_manager.py  callback_server.py  chat_engine.py  clawdbot_bridge.py  cli_setup.py  computer_agent.py  config.py  config_manager.py  deferred_initializer.py  desktop_utils.py  discord_stream.py  emotion_engine.py  engine_manager.py  exceptions.py  game_bridge.py  gemini_vision.py  gifs.py  hearing.py  hermes_agent.py  image_engine.py  latex_engine.py  learning.py  mcp_bridge.py  memory.py  memory_consolidator.py  mempalace_bridge.py  message_queue.py  neural_hub.py  obsidian_connector.py  openclaw_bridge_enhanced.py  openclaw_integration_patch.py  openclaw_launcher.py  optimizer.py  orchestrator.py  pc_manager.py  (+22 more)
core/api/: auth.py  (+6 more)
data/: aiko_queue.db-journal  config.example.json  emotions.json
deploy-hf/: README.md  index.html
directives/: coding_assistant.md  language_learning.md  screen_analysis.md  system_optimization.md
docs/: API_REFERENCE.md  PROFESSIONAL_ROADMAP.md  SPLUS_REPORT.md  UI_AUDIT.md  USER_MANUAL.md  aiko_site_v5.html  index.html  package.json  script.js  styles.css  tailwind.config.js
execution/: capture_screen.py  import_darija.py  ollama_account_manager.py  run_autonomous_script.py  system_check.py
scripts/: build_sidecar.py  check_config.py  check_models.py  deploy_hf.py  list_models.py  live2d_overlay.py  mission_control.py  py.py
tests/: conftest.py  scratch_test.py  test_agent_executor.py  test_api_security.py  test_chat_generate_cmd.py  test_config.py  test_openclaw_integration.py  test_selfie_generator.py  test_vision_routing.py  verify_core.py
website/: README.md  package-lock.json  package.json
(+162 files in other folders)
